[package]
name = "mirajazz"
description = "A library for interfacing with Mirabox and Ajazz stream controller devices"
authors = ["Andrey Viktorov <loonks@disroot.org>"]
version = "0.8.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/4ndv/mirajazz"
repository = "https://github.com/4ndv/mirajazz.git"
license = "MPL-2.0"

[package.metadata.release]
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

[dependencies]
async-hid = { version = "0.4.4", default-features = false, features = ["tokio", "win32"] }
image = { version = "0.25.6", default-features = false, features = ["bmp", "jpeg"] }
futures-lite = "2.6.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }

[[example]]
name = "akp03r"
path = "examples/akp03r.rs"
